--- a/cafefinder/src/components/herosection.css
+++ b/cafefinder/src/components/herosection.css
@@ -57,3 +57,28 @@
     transition: all 0.3s ease;
   }
   
+  @media (max-width: 768px) {
+    .hero-content {
+      top: 25%;
+      left: 5%;
+      max-width: 90%;
+    }
+  
+    .hero-content h1 {
+      font-size: 42px;
+    }
+  
+    .hero-content h4,
+    .hero-content p {
+      font-size: 16px;
+    }
+  
+    .order-now-button {
+      padding: 10px 20px;
+      font-size: 14px;
+    }
+  }
+  
+
+
+   
