--- a/cafefinder/src/components/herosection.css
+++ b/cafefinder/src/components/herosection.css
@@ -1,7 +1,8 @@
 .hero-section {
     width: 100%;
     height: 100vh;
-    background: url('/Coffeemain.png') no-repeat center center/cover;
+    background: url('/capstonemain.png') no-repeat center center/cover;
+    position: relative;
   }
   
   .overlay {
