--- a/cafefinder/src/components/herosection.css
+++ b/cafefinder/src/components/herosection.css
@@ -2,7 +2,8 @@
     width: 100%;
     height: 100vh;
     background: url('/capstonemain.png') no-repeat center center/cover;
-    position: relative;
+    position: rel;
+    
   }
   
   .overlay {
